exam/8/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aliangedu 
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hello.aliangedu.cn
    http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
